fixes div clipping bug

--- a/client/src/assets/css/skull.css
+++ b/client/src/assets/css/skull.css
@@ -2,7 +2,6 @@
 *:before,
 *:after {
   box-sizing: border-box;
-  background-clip: padding-box;
 }
 
 .container {
